# service/src/main/java/org/aplatanao/billing/service/InvoiceResource.java
@@ -1,37 +1,52 @@
 package org.aplatanao.billing.service;
 
-import org.aplatanao.billing.persistence.InvoiceRepository;
-import org.aplatanao.billing.persistence.InvoiceTable;
-import org.aplatanao.billing.persistence.InvoicesPerMonthRepository;
-import org.aplatanao.billing.persistence.InvoicesPerMonthResource;
+import org.aplatanao.billing.persistence.*;
 import org.aplatanao.billing.rest.api.InvoicesApi;
 import org.aplatanao.billing.rest.model.Invoice;
+import org.aplatanao.billing.rest.model.InvoicePosition;
 import org.aplatanao.billing.rest.model.Invoices;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
+import javax.transaction.Transactional;
 import javax.validation.Valid;
 import javax.validation.constraints.Min;
 import javax.validation.constraints.NotNull;
-import javax.ws.rs.GET;
 import javax.ws.rs.NotFoundException;
-import javax.ws.rs.Path;
-import javax.ws.rs.Produces;
+import java.math.BigDecimal;
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class InvoiceResource implements InvoicesApi {
 
     private InvoiceRepository invoices;
 
-    private InvoicesPerMonthRepository perMonth;
-
     @Autowired
-    public InvoiceResource(InvoiceRepository invoices, InvoicesPerMonthRepository perMonth) {
+    public InvoiceResource(InvoiceRepository invoices) {
         this.invoices = invoices;
-        this.perMonth = perMonth;
+    }
+
+    private static Set<InvoicePositionTable> POST(InvoiceTable invoice, List<InvoicePosition> positions) {
+        return positions.stream()
+                .map(p -> {
+                    InvoicePositionTableId id = new InvoicePositionTableId();
+                    id.setInvoiceCode(invoice.getCode());
+                    id.setNumber(p.getNumber().shortValue());
+
+                    InvoicePositionTable table = new InvoicePositionTable();
+                    table.setId(id);
+                    table.setInvoiceTable(invoice);
+                    table.setCents(p.getAmount().multiply(BigDecimal.valueOf(100L)).longValueExact());
+                    table.setDescription(p.getDescription());
+                    return table;
+                })
+                .collect(Collectors.toSet());
     }
 
     private static InvoiceTable POST(Invoice i) {
@@ -39,15 +54,24 @@ public class InvoiceResource implements InvoicesApi {
         invoice.setCode(i.getCode());
         invoice.setComment(i.getComment());
         invoice.setDate(i.getDate());
+        invoice.setInvoicePositionTables(POST(invoice, i.getPositions()));
         return invoice;
     }
 
     private static Invoice GET(InvoiceTable i) {
+        //throw new ArithmeticException("integer overflow");
         return new Invoice()
-                .id(i.getId())
-                .date(i.getDate())
                 .code(i.getCode())
-                .comment(i.getComment());
+                .date(i.getDate())
+                .comment(i.getComment())
+                .positions(i.getInvoicePositionTables()
+                        .stream()
+                        .map(p -> new InvoicePosition()
+                                .number(Math.toIntExact(p.getId().getNumber()))
+                                .amount(BigDecimal.valueOf(p.getCents())
+                                        .divide(BigDecimal.valueOf(100), 2, BigDecimal.ROUND_HALF_UP))
+                                .description(p.getDescription()))
+                        .collect(Collectors.toList()));
     }
 
     private static Invoices LIST(Page<InvoiceTable> p) {
@@ -57,12 +81,12 @@ public class InvoiceResource implements InvoicesApi {
     }
 
     @Override
-    public Invoice getInvoiceById(Long id) {
-        InvoiceTable invoice = invoices.getById(id);
-        if (invoice == null) {
-            throw new NotFoundException("Invoice " + id + " not found.");
+    public Invoice getInvoiceByCode(String code) {
+        Optional<InvoiceTable> optional = invoices.findById(code);
+        if (optional.isPresent()) {
+            return GET(optional.get());
         }
-        return GET(invoice);
+        throw new NotFoundException("Invoice " + code + " not found.");
     }
 
     @Override
@@ -73,12 +97,5 @@ public class InvoiceResource implements InvoicesApi {
     @Override
     public Invoices getInvoices(@NotNull @Min(0) Integer page, @NotNull Integer size) {
         return LIST(invoices.findAll(PageRequest.of(page, size)));
-    }
-
-    @GET
-    @Path("/by-month")
-    @Produces({"application/json"})
-    public List<InvoicesPerMonthResource> getByMonth() {
-        return perMonth.findByYear(2018L);
     }
 }
